# DRM

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt
.github/: action.yml
.github/workflows/: auto-assign.yml  codecov.yml  pybuilder.yml  scorecard.yml
dream/: block.py  crypto.py  dag.py  network.py
modules/: block.py  dag.py  network.py  subset.py
